--- a/novoBlog/src/app/home/home.component.html
+++ b/novoBlog/src/app/home/home.component.html
@@ -1,1 +1,31 @@
-<p>home works!</p>
+<div class="container w-100">
+  <div class="row w-100 mt-5">
+    <div class="col-md-12">
+      <h1 class="text-monospace text-center">
+        Bem vindos ao blog!
+      </h1>
+    </div>
+  </div>
+
+  <div class="row w-100 mb-4 mt-4">
+    <div class="col-md-12">
+      <p class="text-justify text-monospace">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, tempora rem earum culpa blanditiis quod eum
+        sint molestias fugiat recusandae necessitatibus cupiditate rerum id, libero ullam ab doloremque praesentium?
+        Officiis!
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, facilis impedit saepe culpa accusantium
+        neque similique quo iste molestias molestiae unde maiores nemo velit hic sunt quos. Accusamus, corrupti facilis.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla culpa illum voluptatum iure aliquid, asperiores
+        animi, architecto, nostrum aut impedit sint vitae labore pariatur assumenda libero temporibus officiis aperiam!
+        Dignissimos.
+      </p>
+    </div>
+  </div>
+</div>
+<div class="parallax"></div>
+
+<div class="row w-100 mt-5 mb-5">
+  <div class="col-md-12 w-100 d-flex justify-content-center">
+    <button class="btn btn-outline-dark text-uppercase font-weight-bold">Ver o Feed</button>
+  </div>
+</div>
