criação  feed e perfil-lateral

--- a/novoBlog/src/app/footer/footer.component.html
+++ b/novoBlog/src/app/footer/footer.component.html
@@ -1,36 +1,36 @@
- <!-- Footer -->
- <footer class="page-footer font-small stylish-color-dark pt-4">
-
-    <hr>
-
-    <!-- Social buttons -->
-    <ul id="social" class="list-unstyled list-inline text-center">
-        <li class="list-inline-item">
-            <a class="btn-floating mx-2" href="https://github.com/daniel-cardoso" target="_blank">
+<div class="footer">
+  <div id="button"></div>
+  <div id="container">
+    <div id="cont">
+      <div class="footer_center">
+        <div class="container mt-5">
+          <ul id="social" class="list-unstyled list-inline text-center">
+            <li class="list-inline-item">
+              <a class="btn-floating mx-2" href="https://github.com/daniel-cardoso" target="_blank">
                 <img src="assets/img/github.png" alt="logo github">
-            </a>
-        </li>
+              </a>
+            </li>
 
-        <li class="list-inline-item">
-            <a class="btn-floating mx-2" href="https://www.linkedin.com/in/danielcardos0/" target="_blank">
+            <li class="list-inline-item">
+              <a class="btn-floating mx-2" href="https://www.linkedin.com/in/danielcardos0/" target="_blank">
                 <img src="assets/img/linkedin.png" alt="logo linkedin">
-            </a>
-        </li>
+              </a>
+            </li>
 
-        <li class="list-inline-item">
-            <a class="btn-floating mx-2" href="https://discord.gg/XbRKAv" target="_blank">
+            <li class="list-inline-item">
+              <a class="btn-floating mx-2" href="https://discord.gg/XbRKAv" target="_blank">
                 <img src="assets/img/discord.png" alt="">
-            </a>
-        </li>
-    </ul>
-    <!-- Social buttons -->
+              </a>
+            </li>
+          </ul>
+          <!-- Social buttons -->
 
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3 mt-5">© 2020 Copyright: Daniel Cardoso
+          <!-- Copyright -->
+          <div class="footer-copyright text-center py-3 mt-5">© 2020 Copyright: Daniel Cardoso
+          </div>
+          <!-- Copyright -->
+        </div>
+      </div>
     </div>
-    <!-- Copyright -->
-
-</footer>
-<!-- Footer -->
-
-<!--FIM BLOCO RODAPÉ-->
+  </div>
+</div>
