--- a/novoBlog/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/novoBlog/src/app/perfil-lateral/perfil-lateral.component.html
@@ -1,11 +1,11 @@
 <div class="card border-0" style="width: 18rem;">
   <div class="d-flex justify-content-center">
-    <img class="card-img-top rounded-circle" src="https://static.meionorte.com/uploads/imagens/2020/5/4/1142bcee-9118-4263-ba55-c01fd447d2ab-15d86c39-1688-4e7d-96a9-78bc5263f9aa.jpg" alt="Imagem de capa do card">
+    <img class="card-img-top rounded-circle w-75" src="assets/img/mario2.jpg" alt="Imagem de capa do card" width="100" height="200">
   </div>
 
   <div class="card-body">
     <h5 class="card-title text-center text-monospace">Teste título</h5>
     <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
-    <a href="#" class="btn btn-primary">Visitar</a>
+    <a href="#" class="btn btn-outline-dark">Visitar</a>
   </div>
 </div>
