--- a/novoBlog/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/novoBlog/src/app/perfil-lateral/perfil-lateral.component.html
@@ -6,6 +6,6 @@
   <div class="card-body">
     <h5 class="card-title text-center text-monospace">Teste título</h5>
     <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
-    <a href="#" class="btn btn-outline-dark">Visitar</a>
+    <a routerLink="/login" class="btn btn-outline-dark">Teste Login</a>
   </div>
 </div>
