--- a/novoBlog/src/app/feed/feed.component.html
+++ b/novoBlog/src/app/feed/feed.component.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="col-md-6 d-flex justify-content-end">
-            <button type="button" class="btn btn-outline-info w-25">Publicar</button>
+            <button type="button" class="btn btn-outline-dark w-25">Publicar</button>
         </div>
 
       </div>
