--- a/novoBlog/src/app/navbar/navbar.component.html
+++ b/novoBlog/src/app/navbar/navbar.component.html
@@ -4,16 +4,25 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
+
         <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
-              <a class="nav-link text-monospace" href="#">Home <span class="sr-only">(página atual)</span></a>
+              <a class="nav-link text-monospace" routerLink='/home'>Home <span class="sr-only">(página atual)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-monospace" href="#">Feed</a>
+              <a class="nav-link text-monospace" routerLink='/feed'>Feed</a>
             </li>
-           
+            <li class="nav-item">
+              <a class="nav-link text-monospace" routerLink='/login'>Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-monospace" routerLink='/cadastro'>Cadastrar-se</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-monospace" (click)='sair()'>Sair</a>
+            </li>
+
           </ul>
         </div>
       </nav>
