--- a/novoBlog/src/app/navbar/navbar.component.html
+++ b/novoBlog/src/app/navbar/navbar.component.html
@@ -2,28 +2,41 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-          <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
-              <a class="nav-link text-monospace" routerLink='/home'>Home <span class="sr-only">(página atual)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-monospace" routerLink='/feed'>Feed</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-monospace" routerLink='/login'>Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-monospace" routerLink='/cadastro'>Cadastrar-se</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-monospace" (click)='sair()'>Sair</a>
-            </li>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item ">
+                    <a class="nav-link text-monospace" routerLink='/home'>Home <span class="sr-only">(página
+                            atual)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-monospace" routerLink='/feed'>Feed</a>
+                </li>
+                <div *ngIf='auth.btnLogin()'>
 
-          </ul>
+                    <li class="nav-item">
+                        <a class="nav-link text-monospace" routerLink='/login'>Login</a>
+                    </li>
+
+                </div>
+
+
+                <div *ngIf='auth.btnLogin()'>
+                    <li class="nav-item">
+                        <a class="nav-link text-monospace" routerLink='/cadastro'>Cadastrar-se</a>
+                    </li>
+
+                </div>
+
+                <div *ngIf='auth.btnSair()'>
+                    <li class="nav-item">
+                        <a class="nav-link text-monospace" (click)='sair()'>Sair</a>
+                    </li>
+                </div>
+
+            </ul>
         </div>
-      </nav>
+    </nav>
 </div>
