--- a/novoBlog/src/app/feed/feed.component.html
+++ b/novoBlog/src/app/feed/feed.component.html
@@ -59,7 +59,7 @@
                 <input class="form-control w-100" type="search" placeholder="Pesquisar postagem" aria-label="Pesquisar" [(ngModel)]='titulo'>
               </div>
               <div class="col-md-2 pl-0">
-                <button class="btn btn-outline-warning w-100" type="button" >Pesquisar</button>
+                <button class="btn btn-outline-warning w-100" type="button" (click)='findByTituloPostagem()'>Pesquisar</button>
               </div>
             </div>
   
@@ -104,15 +104,15 @@
   
             <div class="row mt-3 mb-3">
               <div class="col-md-10 pr-0">
-                <input class="form-control w-100" type="search" placeholder="Pesquisar postagem" aria-label="Pesquisar" >
+                <input class="form-control w-100" type="search" placeholder="Pesquisar postagem" aria-label="Pesquisar" [(ngModel)]='nomeTema'>
               </div>
               <div class="col-md-2 pl-0">
-                <button class="btn btn-outline-warning w-100" type="button" >Pesquisar</button>
+                <button class="btn btn-outline-warning w-100" type="button" (click)='findByNomeTema()' >Pesquisar</button>
               </div>
             </div>
   
             <div class="row">
-              <div class="col-md-12" *ngFor="let item of listaTemas">
+              <div class="col-md-12" *ngFor="let item of listaTemas | orderBy : key :reverse">
                 <div *ngFor='let post of item.postagem'>
   
                   <div class="card mt-5 mb-5" >
